# Rovaca

./: CMakeLists.txt  README.md  build.sh
benchmark/: run_gatk_hc.sh  run_rovaca.sh
src/: CMakeLists.txt  rovaca_tool.hpp  rovaca_tool_args.h
src/IOStream/: bed_loader.cpp  vcf_loader.cpp
src/common/: reads_filter_lib.h
src/common/test/: downsampler_test.cc
src/haplotypecaller/: haplotypecaller.cpp  haplotypecaller_engine.cpp
src/haplotypecaller/ActiveRegion/: ActiveMainThread.cpp  ActiveRegionTest.cpp  CMakeLists.txt  HcActiveBase.cpp  HcActiveBase.h  RegionManager.cpp  RegionManager.h  dbsnp_manager.cpp  dbsnp_manager.h  reference_manager.cpp  reference_manager.h
src/haplotypecaller/ActiveRegion/test/: TestActiveMainThread.cpp
src/haplotypecaller/apply/: assemble_argument.h  hc_assemble_main.c  hc_assemble_utils.c
src/haplotypecaller/apply/assemble/: hc_assemble_base_graph.c  hc_assemble_base_graph_iter.c  hc_assemble_chain_pruner.c  hc_assemble_read_threading_assembler.c  hc_assemble_read_threading_graph.c  hc_assemble_reads.c  hc_assemble_seq_graph.c  hc_assemble_simple_thread_mem.c  hc_assemble_utils.c  hc_assemble_vertex_sequence_spliter.c
src/haplotypecaller/apply/common/: list.c  pair_list.c
src/haplotypecaller/bqsr/: CMakeLists.txt  bqsr_read_covarivates.cpp  bqsr_read_covarivates.h
src/haplotypecaller/common/: region_interface.cpp  region_interface.h
src/haplotypecaller/common/base/: CMakeLists.txt
src/haplotypecaller/common/base/lib/mempool/: mem_pool_auto_enlarge.c  mem_pool_fast.c
src/haplotypecaller/common/base/lib/ro_sw/: avx2_sw_core.c  avx512_sw_core.c  axv2-16function.h  axv2-32function.h  axv512-16function.h  axv512-32function.h  ro_sw.c  ro_sw.h  sw_cigar.c  sw_core_template.h  sw_internal.h
src/haplotypecaller/common/base/lib/sw_avx/: sw_avx.c
src/haplotypecaller/common/base/test/: CMakeLists.txt  test_ro_sw.c
src/haplotypecaller/common/utils/: BlockingQueue.h
src/haplotypecaller/genotype/: genotype_argument.h
src/haplotypecaller/genotype/test/: germline_genotying_engine_unit_test.cpp
src/haplotypecaller/pairhmm/: CMakeLists.txt  pairhmm_engine.cpp  pairhmm_internal.cpp  pairhmm_internal.h  roDV_schedule.cpp  roDV_schedule.h
src/haplotypecaller/pairhmm/roDV_adapter/: rovaca_pool_allocator.h
src/haplotypecaller/pairhmm/roDV_inter/: pairhmm_inter.cpp  pairhmm_inter.h  pairhmm_inter_api.cpp  pairhmm_inter_api.h  simd_traits_avx2.h  simd_traits_avx512.h
src/haplotypecaller/pairhmm/roDV_intra/: pairhmm_api.h  pairhmm_impl.cpp  pairhmm_impl.h  simd_traits_avx2.h  simd_traits_avx512.h
src/haplotypecaller/pairhmm/test/: CMakeLists.txt  assemble_log_parser.cpp  assemble_log_parser.h  find_repeat_test.cpp  pairhmm_perftest.cpp  pairhmm_schedule_unittest.cpp  pairhmm_unitest_from_assemble.cpp  pairhmm_unittest.cpp  test_case_common.h
src/haplotypecaller/writer/: writer.cpp  writer.h
